# leptos-axum-socket

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml  tests.yml
examples/basic/: Cargo.toml  README.md  package.json
examples/basic/src/: app.rs  lib.rs  main.rs
examples/chat/: Cargo.toml  README.md  package.json
examples/chat/src/: app.rs  data.rs  layout.rs  lib.rs  main.rs  socket_handlers.rs
examples/chat/src/components/: chat.rs  message.rs  mod.rs  rooms.rs
src/: handlers.rs  lib.rs
src/channel/: context.rs  mod.rs  server.rs
