[package]
name = "leptos-axum-socket"
version = "0.2.1"
edition = "2024"
authors = ["Marc-Stefan Cassola"]
categories = ["gui", "web-programming", "wasm"]
description = "Realtime pub/sub communication for Leptos + Axum applications."
exclude = ["examples/", "tests/"]
keywords = ["leptos", "pubsub", "websocket", "communication"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Synphonyte/leptos-axum-socket"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
axum = { version = "0.8.0", optional = true, features = ["macros"] }
futures-util = "0.3.31"
leptos = { version = "0.8.0" }
leptos-use = { version = "0.16.2", default-features = false, features = [
    "use_websocket",
] }
leptos_axum = { version = "0.8.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tracing = "0.1.41"

[features]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos-use/ssr",
    "leptos-use/axum",
]
