[package]
name = "leptos-axum-socket"
version = "0.4.1"
edition = "2024"
categories = ["gui", "web-programming", "wasm"]
description = "Realtime pub/sub communication for Leptos + Axum applications."
exclude = ["examples/", "tests/"]
keywords = ["leptos", "pubsub", "websocket", "communication"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Synphonyte/leptos-axum-socket"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
axum = { version = "0.8", optional = true, features = ["macros"] }
cookie = { version = "0.18", optional = true }
futures-util = { version = "0.3", optional = true }
leptos = { version = "0.8" }
leptos-use = { version = "0.17.0", default-features = false, features = [
  "use_websocket",
] }
leptos_axum = { version = "0.8", optional = true }
regex = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
ssr = [
  "dep:axum",
  "dep:cookie",
  "dep:tokio",
  "dep:leptos_axum",
  "dep:regex",
  "leptos/ssr",
  "leptos-use/ssr",
  "leptos-use/axum",
  "dep:futures-util",
]
hydrate = ["leptos/hydrate", "uuid/js"]
